# cpp_guidelines

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cpp_style_server.py  pyproject.toml  smithery.yaml
cpp_style/prompts/: code_review.py  refactor_suggestion.py
