[project]
name = "cpp-style-guide-mcp"
version = "0.1.0"
description = "C++ 编码规范检查和最佳实践建议的 MCP 服务器"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["mcp", "cpp", "c++", "coding-standards", "style-guide", "linter", "code-review"]
authors = [
    { name = "LV5 Railgun" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "mcp[cli]>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/lv5railgun/cpp_guidelines"
Repository = "https://github.com/lv5railgun/cpp_guidelines"
Issues = "https://github.com/lv5railgun/cpp_guidelines/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
